@@ -1,6 +1,5 @@
 package com.vividsolutions.jump.workbench.ui.wizard;
 
-import java.util.Map;
 
 /**
  * adds missing method definitions in older interface
@@ -11,5 +10,5 @@ public interface WizardPanelV2 extends WizardPanel {
    * Called in WizardDialog when the user presses Previous on this panel's 
    * next panel to (re)initialize this panel, see e.g. {@link org.openjump.core.ui.plugin.file.open.SelectFilesPanel}
    */
-  public void enteredFromRight() throws Exception;
+  void enteredFromRight() throws Exception;
 }
