@@ -5,6 +5,9 @@
 
 * Changes.txt updated until here **********************************************
 
+2018-04-18  mmichaud <m.michael.michaud@orange.fr>
+  * improve WritableDataStoreLayer wizard (user interaction)
+
 2018-04-12 mmichaud <m.michael.michaud@orange.fr>
   * Fix #473 : shapefile driver no more limited to 4G files
   * Fix #471 : small bug in PostGIS (new) driver UI
